--- a/IS-Surfing-Website/form/index.html
+++ b/IS-Surfing-Website/form/index.html
@@ -116,7 +116,7 @@
           <label for="extra-info">Questions or comments? Write them below</label>
           <textarea name="extra-info" id="extra-info" rows="5" placeholder="type here..."></textarea>
       
-        <a href="../form/index.html" class="form-button">Sumbit Now</a>
+        <a href="/form/index.html" class="form-button">Sumbit Now</a>
 
     </form>  
 </section>
